# loyaltylens

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_pipeline.py  seed_feature_store.py
.claude/: settings.json
.github/workflows/: ci.yml
Articles/: 00-loyaltylens-setup-and-glossary.md  01-loyaltylens-feature-pipeline.md  02-loyaltylens-propensity-model.md  03-loyaltylens-rag-retrieval.md  04-loyaltylens-llm-generator.md  05-loyaltylens-llmops-pipeline.md  06-loyaltylens-rlhf-feedback-loop.md  07-loyaltylens-integration-deploy.md  07-loyaltylens-recap-and-next-steps.md  LoyaltyLens_Ebook.html  Pushparajan's Notebook.url  TOOLS.md  linkedin-posts.md  publishing-schedule-and-linkedin-posts.md
data_pipeline/: README.md  __init__.py  features.py  generate.py  ingester.py  loader.py  orchestrator.py  requirements.txt
db/: schema.sql
deploy/: .env.sagemaker  .env.vertex  README.md  __init__.py  cloud_storage.py  config.py  sagemaker_deploy.py  vertex_deploy.py
docker/: Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.yml  entrypoint.sh  init-pgvector.sql
feature_store/: README.md  __init__.py  api.py  reader.py  requirements.txt  store.py  writer.py
feedback_loop/: README.md  __init__.py  aggregator.py  api.py  collector.py  db.py  processor.py  requirements.txt  trigger.py  updater.py
feedback_loop/data/: feedback.db
feedback_loop/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
feedback_loop/ui/src/: App.tsx  api.ts  types.ts
llm_generator/: README.md  __init__.py  api.py  backends.py  generator.py  multimodal.py  prompt_builder.py  requirements.txt  response_parser.py
llm_generator/prompts/: system_v1.yaml  system_v2.yaml
llmops/: README.md  __init__.py  evaluator.py  metrics.py  requirements.txt  tracker.py
llmops/dashboard/: __init__.py  app.py
llmops/drift_monitor/: __init__.py  monitor.py  run_drift.py
llmops/drift_results/: drift_report.json
llmops/eval_harness/: __init__.py  evaluator.py  run_eval.py
llmops/eval_results/: eval_20260417T161630Z.json  eval_20260417T161744Z.json  eval_20260417T162416Z.json  eval_20260417T162417Z.json  eval_20260417T163335Z.json  eval_20260417T163708Z.json
llmops/prompt_registry/: __init__.py  cli.py  history.json  registry.py
mlartifacts/297925209112625667/7dbfee865f4142b0969d0f6917d2ec48/artifacts/: propensity_v1.pt  propensity_v1_meta.json
mlruns/0/: meta.yaml
mlruns/297925209112625667/: meta.yaml
mlruns/297925209112625667/7dbfee865f4142b0969d0f6917d2ec48/: meta.yaml
mlruns/297925209112625667/7dbfee865f4142b0969d0f6917d2ec48/metrics/: test_auc  train_loss  val_auc  val_loss  (+2 more)
propensity_model/: MODEL_CARD.md  README.md  __init__.py  api.py  evaluator.py  inference.py  inspect_model.py  model.py  predictor.py  requirements.txt  train.py  trainer.py
rag_retrieval/: README.md  __init__.py  api.py  benchmark.json  benchmark.py  embeddings.py  generate_offers.py  indexer.py  langchain_retriever.py  llama_retriever.py  requirements.txt  retriever.py  weaviate_client.py
rag_retrieval/data/: offers.json
shared/: README.md  __init__.py  config.py  db.py  deploy.py  logger.py  pipeline.py  requirements.txt  schemas.py
tests/: README.md  __init__.py  requirements.txt  test_deploy.py  test_eval_harness.py  test_features.py  test_feedback.py  test_generator.py  test_llm_generator.py  test_llmops.py  test_llmops_evaluator.py  test_pipeline.py  test_propensity.py  test_propensity_model.py  test_rag.py  test_shared.py
(+3 files in other folders)
