[tool.poetry]
name = "loyaltylens"
version = "0.1.0"
description = "ML-powered loyalty analytics platform combining propensity modelling and RAG-driven personalisation"
authors = ["Pushparajan Ramar"]
readme = "README.md"
packages = [
    { include = "data_pipeline" },
    { include = "feature_store" },
    { include = "propensity_model" },
    { include = "rag_retrieval" },
    { include = "llm_generator" },
    { include = "llmops" },
    { include = "feedback_loop" },
    { include = "shared" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
redis = "^5.0"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
torch = ">=2.0"
xgboost = "^2.0"
weaviate-client = "^4.6"
anthropic = "^0.28"
openai = "^1.30"
langchain = "^0.2"
langchain-community = "^0.2"
sentence-transformers = "^3.0"
mlflow = "^2.13"
prometheus-client = "^0.20"
prefect = "^3.0"
structlog = "^24.0"
duckdb = "^0.10"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
pyarrow = "^16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
types-redis = "^4.6"
types-psycopg2 = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
