[project]
name = "loyaltylens"
version = "0.1.0"
description = "ML-powered loyalty analytics platform combining propensity modelling and RAG-driven personalisation"
authors = [{name = "Pushparajan Ramar"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.0",
    "xgboost>=2.0",
    "weaviate-client>=4.6",
    "anthropic>=0.28",
    "openai>=1.30",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "sentence-transformers>=3.0",
    "mlflow>=2.13",
    "prometheus-client>=0.20",
    "prefect>=3.0",
    "structlog>=24.0",
    "duckdb>=0.10",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyarrow>=16.0",
    "huggingface-hub>=0.20",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-redis>=4.6",
    "types-psycopg2>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "data_pipeline",
    "feature_store",
    "propensity_model",
    "rag_retrieval",
    "llm_generator",
    "llmops",
    "feedback_loop",
    "shared",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
